# mender-flash

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LIC_FILES_CHKSUM.sha256  main.c  main.cpp  tests.sh
.github/: dependabot.yml
common/: expected.hpp  io.cpp  io.hpp
libflash/: fileio.cpp  fileio.hpp  optimized_writer.cpp  optimized_writer.hpp  platformfs.cpp  platformfs.hpp
tests/: CMakeLists.txt
tests/libflash/: optimized_writer_test.cpp
